@@ -1,3 +1,9 @@
+Tue Jan 12 08:34:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
+        * TAO_IDL/be_include/be_visitor_ami4ccm_pre_proc.h:
+          Extended AMI4CCM code generation
+
 Fri Jan  8 11:42:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/ast/ast_interface.cpp:
